--- a/js_validate_roman_numbers/Views/Home/Index.cshtml
+++ b/js_validate_roman_numbers/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>Roman Numbers</h1>
     <p class="lead">Enter Roman number and convert it to Arabic numbers.</p>
-    <p><a href="https://asp.net" class="btn btn-warning btn-lg">Download repo from Github &raquo;</a></p>
+    <p><a href="https://github.com/ridimdev/js_convert_roman_numbers" class="btn btn-warning btn-lg">Download repo from Github &raquo;</a></p>
 </div>
 
 <div style="padding:4%">
